@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,41 +30,34 @@ import static test.jextract.test8245003.test8245003_h.*;
 import static java.lang.foreign.Linker.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 8245003
  * @summary jextract does not generate accessor for MemorySegement typed values
  * @library /lib
- * @run main/othervm JtregJextract -l Test8245003 -t test.jextract.test8245003 test8245003.h
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8245003
- */
-/*
- * @test id=sources
- * @bug 8245003
- * @summary jextract does not generate accessor for MemorySegement typed values
- * @library /lib
- * @run main/othervm JtregJextractSources -l Test8245003 -t test.jextract.test8245003 test8245003.h
+ * @run main/othervm JtregJextract -l Test8245003 --use-system-load-library -t test.jextract.test8245003 test8245003.h
+ * @build Test8245003
  * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8245003
  */
 public class Test8245003 {
     @Test
     public void testStructAccessor() {
-        var seg = special_pt$SEGMENT();
+        var seg = special_pt();
         assertEquals(seg.byteSize(), Point.sizeof());
-        assertEquals(Point.x$get(seg), 56);
-        assertEquals(Point.y$get(seg), 75);
+        assertEquals(Point.x(seg), 56);
+        assertEquals(Point.y(seg), 75);
 
-        seg = special_pt3d$SEGMENT();
+        seg = special_pt3d();
         assertEquals(seg.byteSize(), Point3D.sizeof());
-        assertEquals(Point3D.z$get(seg), 35);
-        var pointSeg = Point3D.p$slice(seg);
+        assertEquals(Point3D.z(seg), 35);
+        var pointSeg = Point3D.p(seg);
         assertEquals(pointSeg.byteSize(), Point.sizeof());
-        assertEquals(Point.x$get(pointSeg), 43);
-        assertEquals(Point.y$get(pointSeg), 45);
+        assertEquals(Point.x(pointSeg), 43);
+        assertEquals(Point.y(pointSeg), 45);
     }
 
     @Test
     public void testArrayAccessor() {
-        var seg = iarr$SEGMENT();
+        var seg = iarr();
         assertEquals(seg.byteSize(), C_INT.byteSize()*5);
         int[] arr = seg.toArray(C_INT);
         assertEquals(arr.length, 5);
@@ -74,10 +67,10 @@ public class Test8245003 {
         assertEquals(arr[3], -42);
         assertEquals(arr[4], 345);
 
-        seg = foo$SEGMENT();
+        seg = foo();
         assertEquals(seg.byteSize(), Foo.sizeof());
-        assertEquals(Foo.count$get(seg), 37);
-        var greeting = Foo.greeting$slice(seg);
+        assertEquals(Foo.count(seg), 37);
+        var greeting = Foo.greeting(seg);
         byte[] barr = greeting.toArray(C_CHAR);
         assertEquals(new String(barr), "hello");
     }
