@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,19 +30,12 @@ import static org.testng.Assert.assertTrue;
 import static test.jextract.test8246341.test8246341_h.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 8246341
  * @summary jextract should generate Cpointer utilities class
  * @library /lib
- * @run main/othervm JtregJextract -l Test8246341 -t test.jextract.test8246341 test8246341.h
- * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest8246341Test
- */
-/*
- * @test id=sources
- * @bug 8246341
- * @summary jextract should generate Cpointer utilities class
- * @library /lib
- * @run main/othervm JtregJextractSources -l Test8246341 -t test.jextract.test8246341 test8246341.h
+ * @run main/othervm JtregJextract -l Test8246341 --use-system-load-library -t test.jextract.test8246341 test8246341.h
+ * @build LibTest8246341Test
  * @run testng/othervm --enable-native-access=ALL-UNNAMED LibTest8246341Test
  */
 public class LibTest8246341Test {
@@ -53,10 +46,10 @@ public class LibTest8246341Test {
             var callback = func$callback.allocate((argc, argv) -> {
                 callbackCalled[0] = true;
                 assertEquals(argc, 4);
-                assertEquals(argv.getAtIndex(C_POINTER, 0).getUtf8String(0), "java");
-                assertEquals(argv.getAtIndex(C_POINTER, 1).getUtf8String(0), "python");
-                assertEquals(argv.getAtIndex(C_POINTER, 2).getUtf8String(0), "javascript");
-                assertEquals(argv.getAtIndex(C_POINTER, 3).getUtf8String(0), "c++");
+                assertEquals(argv.getAtIndex(C_POINTER, 0).getString(0), "java");
+                assertEquals(argv.getAtIndex(C_POINTER, 1).getString(0), "python");
+                assertEquals(argv.getAtIndex(C_POINTER, 2).getString(0), "javascript");
+                assertEquals(argv.getAtIndex(C_POINTER, 3).getString(0), "c++");
             }, arena);
             func(callback);
         }
@@ -69,7 +62,7 @@ public class LibTest8246341Test {
             var addr = arena.allocate(C_POINTER);
             addr.set(C_POINTER, 0, MemorySegment.NULL);
             fillin(addr);
-            assertEquals(addr.get(C_POINTER, 0).getUtf8String(0), "hello world");
+            assertEquals(addr.get(C_POINTER, 0).getString(0), "hello world");
         }
     }
 }
