@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,28 +29,20 @@ import static org.testng.Assert.assertEquals;
 import static test.jextract.test8261511.test8261511_h.*;
 
 /*
- * @test id=classes
+ * @test
  * @bug 8261511
  * @summary jextract does not generate accessor for MemorySegement typed values
  * @library /lib
- * @run main/othervm JtregJextract -l Test8261511 -t test.jextract.test8261511 test8261511.h
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8261511
- */
-/*
- * @test id=sources
- * @bug 8261511
- * @summary jextract does not generate accessor for MemorySegement typed values
- * @library /lib
- * @run main/othervm JtregJextractSources -l Test8261511 -t test.jextract.test8261511 test8261511.h
+ * @run main/othervm JtregJextract -l Test8261511 --use-system-load-library -t test.jextract.test8261511 test8261511.h
+ * @build Test8261511
  * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8261511
  */
 public class Test8261511 {
     @Test
     public void test() {
         try (Arena arena = Arena.ofConfined()) {
-            var funcPtr = Foo.sum$get(get_foo(arena));
-            var sumIface = Foo.sum.ofAddress(funcPtr, arena);
-            assertEquals(sumIface.apply(15,20), 35);
+            var funcPtr = Foo.sum(get_foo(arena));
+            assertEquals(Foo.sum.invoke(funcPtr, 15, 20), 35);
             assertEquals(sum(1.2, 4.5), 5.7, 0.001);
         }
     }
